helm-chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress 
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /importer-module/(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: importer-module
                port:
                  number: 3000
          - path: /mapping-module/(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: mapping-module 
                port:
                  number: 8000
